force-app/main/default/objects/Account/fields/CD__c.field-meta.xml
<CustomField>
    <fullName>CD__c</fullName>
    <label>CDupdate</label>
    <length>80</length>
    <type>Text</type>
</CustomField>