force-app/main/default/objects/Account/fields/CI__c.field-meta.xml
<CustomField>
    <fullName>CI__c</fullName>
    <label>CIupdate</label>
    <length>80</length>
    <type>Text</type>
</CustomField>