force-app/main/default/objects/Account/fields/Des__c.field-meta.xml
<CustomField>
    <fullName>Des__c</fullName>
    <label>Des</label>
    <length>80</length>
    <type>Text</type>
</CustomField>